# ggtalk_server

./: .gitignore  CMakeLists.txt  build.sh  readme.md
base/: CMakeLists.txt  ImPdu.cpp  ImPdu.h  Singleton.h  Snowflake.h  StringUtil.cc  StringUtil.h  UniqueId.cpp  UniqueId.h  UtilPdu.cpp  UtilPdu.h  fast_queue.h  fileHandle.cc  fileHandle.h  httpformdata.cc  httpformdata.h  sslwrapper.cpp  threadTaskPool.cpp  threadTaskPool.h
db/: ImServer.sql  Testdb.sql
doc/: message_define.md
evpp/: CMakeLists.txt  logging.h  server_status.h  tcp_conn.h  windows_port.h
proto/: IMBaseDefine.proto  IMCmdIdDefine.proto  IMCommPackage.proto  IMFriendPackage.proto  IMGroupPackage.proto  IMMsgPackage.proto  generate.sh
server/cdn_server/: CMakeLists.txt  cdn_main.cc  cdn_server.cc  cdn_server.h
server/db_server/: CMakeLists.txt  DbSrvConfigMgr.cc  DbSrvConfigMgr.h  MessageDBControl.cc  MessageDBControl.h  MongoAsynMgr.h  MongoAysnOper.cc  MongoAysnOper.h  MongoDefine.h  MongoWrapper.cc  MongoWrapper.h  MySqlHandler.cc  MySqlHandler.h  databasemysql.h  db_main.cc  db_server.cc  db_server.h  dbmysqltaskpool.cc  dbmysqltaskpool.h  process_requset.cc  process_requset.h
server/db_server/business/: process_requset.cc  process_requset.h
server/db_server/dbWrapper/: DbSrvConfigMgr.cc  DbSrvConfigMgr.h  MongoAsynMgr.cc  MongoAsynMgr.h  MongoAysnOper.h  MongoWrapper.cc  MongoWrapper.h  RedisClient.hpp  databasemysql.cc  dbmysqltaskpool.h
server/msg_server/: CMakeLists.txt  ClientSession.cc  ClientSession.h  chatServer.cc  chatServer.h  dbConnect.cc  dbConnect.h  msg_main.cc
server/pic_server/: CMakeLists.txt  httpHandler.cc  httpHandler.h  http_formdata.cc  http_formdata.h  pic_main.cc  pic_server.cc  pic_server.h
server/proto/: .gitignore  readme.md
